8 March 2011: Wouter:
	- precompile work:
		class ANY gets AA flag, SOA and type-NS processing, just
		like BIND (9.6) and it simplifies processing for NSD.
	  other than compression difference (precompile compresses smaller),
	  there are no differences in a 49000 query testset against the root,
	  without EDNS.

7 March 2011: Wouter:
	- check chown value and report high verbosity its error.

3 March 2011: Matthijs:
	- fix #bug352: fix hardcoded paths in manpages.

2 March 2011: Matthijs:
	- fix #bug354: make realclean cleans too much
	- added make devclean for cleaning up autoconf and automake stuff
	- Fix hardcoded paths in nsd.conf.sample and nsd.conf.5

24 February 2011: Matthijs
	- fix #bug350: refused notifies should log client ip.

2 March 2011: Wouter
	- Fix AXFR service with radix tree.
	- cutest for speed of answer encoding, and format of answers for root.

1 March 2011: Wouter
	- after merge, remove double -I. from makefile.
	- radixtree is default.  Nicer makefile and no warnings from unused
	  flex functions.

1 March 2011: Wouter
	- merge with trunk r3181:
	24 February 2011: Matthijs
		- fix #bug350: refused notifies should log client ip.
	24 February 2011: Wouter
		- fix bug#362: outgoing-interface and v4 vs. v6 leads to spurious
		  warning messages.
		- fix bug#363: nsd-checkconf -v does not print outgoing-interface ok.
		- fix that nsd-checkconf -o outgoing-interface omits NOKEY.
	23 February 2011: Wouter
		- fix for bug#357, make xfrd quit with many zones.
		
23 February 2011: Wouter
	- Merge trunk r3151.
		22 February 2011: Matthijs
			- Patch Jakob Schlyter (setusercontext before chroot).
		18 February 2011: Wouter
			- overhaul of testset, with port uniqueness and fast start and stop.
		11 February 2011: Wouter
			- added test case to do with bug357.
		24 January 2011: Matthijs
			- Patch Tom Hendrikx (only errors to stderr when doing nsdc patch).

17 February 2011: Wouter